<resources>
    <string name="app_name">App Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_compose">Compose</string>
    <string name="item_from">From</string>
    <string name="item_to">To</string>
    <string name="item_cc">Cc</string>
    <string name="item_bcc">Bcc</string>
    <string name="item_subject">Subject</string>
    <string name="item_compose_email">Compose Email</string>
    <string name="item_email">study.aibles@gmail.com</string>

    <string name="hey">Hey</string>
</resources>