<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SendFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/start_guideline"
            app:layout_constraintGuide_percent="0.05"
            android:orientation="vertical"/>
        <!--    From-->
        <TextView
            android:id="@+id/item_from"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            android:text="@string/item_from"
            android:textSize="@dimen/item_text_size"/>

        <EditText
            android:id="@+id/et_from"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@id/item_from"
            app:layout_constraintBottom_toBottomOf="@id/item_from"
            app:layout_constraintStart_toEndOf="@id/item_from"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/item_margin_start"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"/>

        <ImageButton
            android:id="@+id/btn_arrow_down"
            android:layout_width="@dimen/icon_edge"
            android:layout_height="@dimen/icon_edge"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="@id/item_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/item_from"
            android:src="@drawable/ic_arrow_down"/>

        <TextView
            android:background="@color/white_gray"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/item_from"
            android:layout_height="@dimen/line_height"/>

        <!--    To-->
        <TextView
            android:id="@+id/item_to"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            app:layout_constraintTop_toBottomOf="@id/item_from"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            android:gravity="center"
            android:text="@string/item_to"
            android:textSize="@dimen/item_text_size"/>

        <EditText
            android:id="@+id/et_to"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@id/item_to"
            app:layout_constraintBottom_toBottomOf="@id/item_to"
            app:layout_constraintStart_toEndOf="@id/item_to"
            app:layout_constraintEnd_toEndOf="@id/btn_arrow_down"
            android:layout_marginStart="@dimen/item_margin_start"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height" />

        <TextView
            android:background="@color/white_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            app:layout_constraintTop_toBottomOf="@id/item_to"/>

        <!--    Cc-->
        <TextView
            android:id="@+id/item_cc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/item_to"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            android:text="@string/item_cc"
            android:textSize="@dimen/item_text_size"/>

        <EditText
            android:id="@+id/et_cc"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"
            android:layout_marginStart="@dimen/item_margin_start"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@id/item_cc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/item_cc"
            app:layout_constraintTop_toTopOf="@id/item_cc"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:background="@color/white_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            app:layout_constraintTop_toBottomOf="@id/item_cc"/>

        <!--    Bcc-->
        <TextView
            android:id="@+id/item_bcc"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/item_cc"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            android:text="@string/item_bcc"
            android:textSize="@dimen/item_text_size"/>

        <EditText
            android:id="@+id/et_bcc"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@id/item_bcc"
            app:layout_constraintBottom_toBottomOf="@id/item_bcc"
            app:layout_constraintStart_toEndOf="@id/item_bcc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/item_margin_start"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"/>

        <TextView
            android:background="@color/white_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            app:layout_constraintTop_toBottomOf="@id/item_bcc"/>

        <!--    Subject-->

        <EditText
            android:id="@+id/et_subject"
            android:background="@null"
            android:hint="@string/item_subject"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/item_bcc"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/item_height"/>

        <TextView
            android:background="@color/white_gray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            app:layout_constraintTop_toBottomOf="@id/et_subject"/>

        <!--    Compose Email-->

        <EditText
            android:id="@+id/et_compose_email"
            android:background="@null"
            android:gravity="left|top"
            android:hint="@string/item_compose_email"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/et_subject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/item_margin_top"
            android:inputType="textMultiLine"
            android:layout_width="0dp"
            android:layout_height="0dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>