<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReceiveFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>


        <TextView
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_height"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/star"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:text="@string/hello_blank_fragment" />

        <ImageView
            android:id="@+id/star"
            android:src="@drawable/ic_baseline_star_outline_24"
            android:layout_width="@dimen/icon_edge"
            android:layout_height="@dimen/icon_edge"
            app:layout_constraintBottom_toBottomOf="@id/subject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subject" />


        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="0dp"
            android:layout_height="@dimen/relative_height"
            app:layout_constraintTop_toBottomOf="@+id/subject"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@id/avt"
                android:layout_width="@dimen/icon_edge"
                android:layout_height="@dimen/icon_edge"
                android:background="@drawable/circular"
                android:gravity="center"
                android:layout_marginStart="@dimen/text_margin"
                android:text=""
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/avt"
                android:layout_marginStart="@dimen/text_margin"

                android:text="@string/hello_blank_fragment"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/from"
                android:layout_marginStart="@dimen/text_margin"
                android:text="@string/hello_blank_fragment"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/from"
                android:layout_toEndOf="@+id/avt"
                android:layout_marginStart="@dimen/text_margin"
                android:textColor="@color/gray"
                android:text="@string/item_to" />

            <ImageView
                android:id="@+id/arrow_down"
                android:src="@drawable/ic_arrow_down"
                android:layout_width="wrap_content"
                android:layout_below="@id/from"
                android:layout_toEndOf="@id/to"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/arrow_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ic_margin_center"
                android:layout_toStartOf="@+id/more"
                android:src="@drawable/ic_subdirectory_arrow_right_rotate" />

            <ImageView

                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/ic_margin_center"
                android:src="@drawable/ic_more_vert" />
        </RelativeLayout>

        <TextView
            android:id="@+id/hey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/relative"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/compose_padding"
            android:textColor="@color/black"
            android:text="@string/hey" />


        <TextView
            android:id="@+id/compose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hey"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/compose_padding"
            android:textColor="@color/black"
            android:text="@string/hello_blank_fragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>